--- a/vite-project/src/components/login.css
+++ b/vite-project/src/components/login.css
@@ -7,24 +7,7 @@
     width: 100%; 
     height: 100vh; /* You can adjust this value to make it larger than the viewport height */
   }
-  .log {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%; 
-    height: 100vh; /* You can adjust this value to make it larger than the viewport height */
-  }
-  .log button{
-    width: 100%;
-    padding: 10px;
-    background-color: #d69c1e;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-
-  }
+  
   .auth-form {
     width: 300px;
     padding: 20px;
@@ -52,7 +35,7 @@
   }
   
   .auth-form button:hover {
-    background-color: #0056b3;
+    background-color: rgb(226, 33, 233);
   }
   
   .auth-form h2 {
